# salary-master

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_04_16_2102-c8911f124d4b_.py  2023_04_16_2106-dec4b8f5aac0_create_jobs_table.py  2023_04_16_2119-b02a499d3768_add_new_column.py
ops/: salary_master.service  salary_master_nginx.conf
sql/: create_jobs_table.sql
src/api/: main.py
src/service/data_loader/: main.py  read.py
