[tool.poetry]
name = "salary-master-backend"
version = "0.1.0"
description = ""
authors = ["Alex <alexander7dk@gmail.com>"]
readme = "README.md"
packages = [{include = "salary_master_backend"}]

[tool.poetry.dependencies]
python = "~3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
