[tool.poetry]
name = "salary-master-backend"
version = "0.1.0"
description = ""
authors = ["Alex <alexander7dk@gmail.com>"]
readme = "README.md"
packages = [{include = "salary_master_backend"}]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
alembic = "^1.10.3"
psycopg2 = "^2.9.6"
xlrd = "^2.0.1"
pandas = "^2.0.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
